--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,24 @@
 {
   "name": "ระบบติดตามการแก้ผลการเรียนโรงเรียนเกาะสมุย",
   "short_name": "GradeFix",
-  "start_url": ".",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#F3F4F6",
   "theme_color": "#2563EB",
   "description": "ระบบติดตามการแก้ผลการเรียน (0, ร, มส) สำหรับโรงเรียน เชื่อมต่อข้อมูลระหว่างครูและฝ่ายวัดผล",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2997/2997321.png",
+      "src": "/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2997/2997321.png",
+      "src": "/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
